tests/dataset/tpc-ds/compiler/c/q34.error
/tmp/q34.c: In function ‘test_TPCDS_Q34_simplified’:
/tmp/q34.c:282:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  282 |   if (test_TPCDS_Q34_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/q34.c:286:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  286 |       if (test_TPCDS_Q34_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/q34.c: In function ‘main’:
/tmp/q34.c:458:29: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  458 |   result_item_list_t tmp4 = result_item_list_t_create(dn.len * customer.len);
      |                             ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q34.c:458:72: error: ‘(customer_t *)&customer’ is a pointer; did you mean to use ‘->’?
  458 |   result_item_list_t tmp4 = result_item_list_t_create(dn.len * customer.len);
      |                                                                        ^
      |                                                                        ->
/tmp/q34.c:490:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  490 |     _json_string(it.c_last_name);
      |                  ~~^~~~~~~~~~~~
/tmp/q34.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q34.c:494:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  494 |     _json_string(it.c_first_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/q34.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q34.c:498:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  498 |     _json_string(it.c_salutation);
      |                  ~~^~~~~~~~~~~~~
/tmp/q34.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q34.c:502:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  502 |     _json_string(it.c_preferred_cust_flag);
      |                  ~~^~~~~~~~~~~~~~~~~~~~~~
/tmp/q34.c:65:32: note: expected ‘char *’ but argument is of type ‘const char *’
   65 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/q34.c:514:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  514 |   test_TPCDS_Q34_simplified_result = result;
      |                                      ^~~~~~
